--- a/src/templates/macros/ViewIssueMacro.vm
+++ b/src/templates/macros/ViewIssueMacro.vm
@@ -74,7 +74,7 @@
            <BR>
         #set( $attCommentGroup = $intake.Attachment.setKey("attCommentKey") )
          #fieldErrorMsg($attCommentGroup.DataAsString "<br>")
-           <textarea rows="4" cols="35" class="text" name ="$attCommentGroup.DataAsString.Key"></textarea>
+           <textarea rows="4" cols="35" class="text" name ="$attCommentGroup.DataAsString.Key">$!attCommentGroup.DataAsString.Value</textarea>
            <input type="hidden" name="$attCommentGroup.Name.Key" value="comment">
            </td>
         </tr>
