--- a/src/templates/screens/Login.vm
+++ b/src/templates/screens/Login.vm
@@ -22,7 +22,7 @@ $page.setTitle("Welcome to Scarab")
 
 <div class="axial">
 <table cellpadding="3" cellspacing="2" border="0">
-<tr><th>Email Address</th>
+<tr><th>Email address</th>
 <td>
 <input name="$loginGroup.Username.Key" value="$!loginGroup.Username.Value" size="25" type="text" />
 #fieldErrorMsg ($loginGroup.Username "")
@@ -37,7 +37,7 @@ $page.setTitle("Welcome to Scarab")
 </tr>
 
 <tr>
-<td colspan="2"><input type="submit" name="eventSubmit_doLogin" value="Login" /></td>
+<td>&#160;</td><td><input type="submit" name="eventSubmit_doLogin" value="Login" /></td>
 </tr>
 </table>
 </div>
