--- a/src/templates/screens/ViewIssue.vm
+++ b/src/templates/screens/ViewIssue.vm
@@ -1,5 +1,9 @@
 #set ($action = $link.setPage("ViewIssue.vm").setAction("ModifyIssue").addPathInfo("nextTemplate", "ViewIssue.vm"))
-#set ($currentIssueId = $data.Parameters.getString("issue_id", $data.Parameters.getString("id")))
+#if ($data.Parameters.getString("issue_id"))
+    #set ($currentIssueId = $data.Parameters.getString("issue_id"))
+#else
+    #set ($currentIssueId = $data.Parameters.getString("id"))
+#end
 #set ($currentIssue = $scarabR.getIssue($currentIssueId))
 #set ($fullHistory = $data.Parameters.getString("fullhistory",""))
 
