--- a/src/templates/screens/Approval.vm
+++ b/src/templates/screens/Approval.vm
@@ -1,8 +1,9 @@
-$page.setTitle("Approval")
-#set ( $module = $scarabR.CurrentModule )
+<div id="approval" class="app">
+$page.setTitle("Approve/Reject User Submitted Items")
 
-  <div id="div2-6-0" class="app">
-       <h3>Approve/Reject User Submitted Items</h3>
+<h2>$page.Title</h2>
+
+#set ( $module = $scarabR.CurrentModule )
 
 <form action="$link.setPage("Approval.vm")" method="get">
 <input type="hidden" name="action" value="admin.Approval"/>
@@ -12,123 +13,116 @@ $page.setTitle("Approval")
   <div class="alert">There are no items to approve.</div>
 #else
 
-<p class="functnbar"><input type="submit" value="submit" name="eventSubmit_doSubmit" />&#160;<input type="submit" value="cancel" name="eventSubmit_doCancel" />&#160;<input type="submit" value="clear form" /></p>
+ <div class="functnbar">
+ <table cellpadding="0" cellspacing="0" border="0">
+  <tr>
+   <td><input type="submit" value="submit" name="eventSubmit_doSubmit" />&#160;</td>
+   <td><input type="submit" value="cancel" name="eventSubmit_doCancel" />&#160;</td>
+   <td><input type="submit" value="clear form" /></td>
+  </tr>
+ </table>
+ </div>
 
+ <table width="100%" border="1" cellspacing="2" cellpadding="3">
+  <tr>
+   <th nowrap="nowrap">&nbsp;</th>
+   <th><a href="#" title="sort">date</a></th>
+   <th><a href="#" title="sort">type</a></th>
+   <th><a href="#" title="sort">submitted by</a></th>
+  
+  ## <th><a href="#" title="sort">project</a></th> 
+  ## <th><a href="#" title="sort">user role</a></th>
 
-       <table width="100%" border="1" cellspacing="2" cellpadding="3">
-        <tr>
-         <th nowrap="nowrap">&nbsp;</th>
+   <th><a href="#" title="sort">name</a></th>
+   <th><a href="#" title="sort">description</a></th>
+   <th>comments</th>
+   <th>action</th>
+  </tr>
 
-         <th><a href="#" title="sort">date</a></th>
+ #foreach( $query in $module.UnapprovedQueries )
+  #if( $velocityCount % 2 > 0 )
+   <tr class="a">
+  #else 
+   <tr class="b">
+  #end
+  <td><input type="checkbox" name="query_id_$query.QueryId" /></td>
+  <td>$format.getDate($scarabG.DateFormat, $query.CreatedDate)</td>
+  <td>query</td>
 
-         <th><a href="#" title="sort">type</a></th>
-
-         <th><a href="#" title="sort">submitted by</a></th>
-         
-        ## <th><a href="#" title="sort">project</a></th>
-         
-        ## <th><a href="#" title="sort">user role</a></th>
-
-         <th><a href="#" title="sort">name</a></th>
-
-         <th><a href="#" title="sort">description</a></th>
-
-         <th>comments</th>
-
-         <th>action</th>
-        </tr>
-
-#foreach( $query in $module.UnapprovedQueries )
-         #if( $velocityCount % 2 > 0 )
-            <tr class="a">
-         #else 
-            <tr class="b">
-         #end
-         <td><input type="checkbox" name="query_id_$query.QueryId" /></td>
-
-         <td>$format.getDate($scarabG.DateFormat, $query.CreatedDate)</td>
-
-         <td>query</td>
-
-        #set ($createdUser = $scarabR.getUser($query.UserId))
-       <input type = "hidden" name="query_user_$query.QueryId" value = "$createdUser.UserId">
-         <td><a href="mailTo:$createdUser.Email">$createdUser.UserName</a></td>
-
-         <td>$module.Name</td>
-         
-         <td>#set ($comma = "")
-             #foreach ($role in $security.getRoles($createdUser, $module))
-                   $role.Name$comma
-                   #set ($comma = ",")
-             #end
-         </td>
-         <td><a href="$query.getEditLink($link.toString())">$query.Name</a></td>
-
-         <td>#if ($query.Description) $query.Description #else &nbsp; #end</td>
-         
-         <td> <textarea rows="2" cols="20" name="query_comment_$query.QueryId"></textarea></td>
-         
-         <td><select name="query_action_$query.QueryId">
-                <option value="none">no action</option>
-                <option value="comment">comment only</option>
-                <option value="approve">approve</option>
-                <option value="reject" >reject</option>
-             </select>
-
-                </td>                  
-        </tr>
+  #set ($createdUser = $scarabR.getUser($query.UserId))
+  <input type = "hidden" name="query_user_$query.QueryId" value = "$createdUser.UserId">
+  <td><a href="mailTo:$createdUser.Email">$createdUser.UserName</a></td>
+  <td>$module.Name</td>
+  <td>#set ($comma = "")
+   #foreach ($role in $security.getRoles($createdUser, $module))
+    $role.Name$comma
+    #set ($comma = ",")
+   #end
+  </td>
+  <td><a href="$query.getEditLink($link.toString())">$query.Name</a></td>
+  <td>#if ($query.Description) $query.Description #else &nbsp; #end</td> 
+  <td> <textarea rows="2" cols="20" name="query_comment_$query.QueryId"></textarea></td> 
+  <td><select name="query_action_$query.QueryId">
+   <option value="none">no action</option>
+   <option value="comment">comment only</option>
+   <option value="approve">approve</option>
+   <option value="reject" >reject</option>
+   </select>
+  </td>      
+ </tr>
 #end
 
 #foreach ($template in $module.UnapprovedTemplates)
+ #if( $velocityCount % 2 > 0 )
+  <tr class="a">
+ #else 
+  <tr class="b">
+ #end
+  <td><input type="checkbox" name="template_id_$template.IssueId" /></td>
+  <td>$format.getDate($scarabG.DateFormat, $template.CreatedDate)</td>
+  <td>enter issue template</td>
 
-         #if( $velocityCount % 2 > 0 )
-            <tr class="a">
-         #else 
-            <tr class="b">
-         #end
-         <td><input type="checkbox" name="template_id_$template.IssueId" /></td>
+  #set ($createdUser = $template.CreatedBy)
+  <input type = "hidden" name="template_user_$template.IssueId" value = "$createdUser.UserId">
+  <td><a href="mailTo:$createdUser.Email">$createdUser.UserName</a></td>
 
-         <td>$format.getDate($scarabG.DateFormat, $template.CreatedDate)</td>
+   ##<td>$template.Module.Name</td>
+   ##<td>role X</td>
 
-         <td>enter issue template</td>
-
-        #set ($createdUser = $template.CreatedBy)
-       <input type = "hidden" name="template_user_$template.IssueId" value = "$createdUser.UserId">
-         <td><a href="mailTo:$createdUser.Email">$createdUser.UserName</a></td>
-
-         ##<td>$template.Module.Name</td>
-
-         ##<td>role X</td>
-
-         #set ( $editLink = $link.setPathInfo("issue_id", $template.IssueId.toString()).setPage("SaveTemplate.vm"))
-         <td><a href="$editLink">$template.TemplateInfo.Name</a></td>
-         
-         <td>#if ($template.TemplateInfo.Description) $template.TemplateInfo.Description #else &nbsp; #end</td>
-         
-         <td> <textarea rows="2" cols="20" name="template_comment_$template.IssueId"></textarea></td>
-         
-         <td><select name="template_action_$template.IssueId">
-                <option>no action</option>
-                <option>comment only</option>
-                <option>approve</option>
-                        <option>reject</option>
-                        </select>
-                        
-                </td>
-        </tr>
+   #set ( $editLink = $link.setPathInfo("issue_id", $template.IssueId.toString()).setPage("SaveTemplate.vm"))
+   <td><a href="$editLink">$template.TemplateInfo.Name</a></td>
+   <td>#if ($template.TemplateInfo.Description) $template.TemplateInfo.Description #else &nbsp; #end</td>   
+   <td> <textarea rows="2" cols="20" name="template_comment_$template.IssueId"></textarea></td>
+   <td><select name="template_action_$template.IssueId">
+    <option>no action</option>
+    <option>comment only</option>
+    <option>approve</option>
+    <option>reject</option>
+    </select>   
+   </td>
+  </tr>
 #end
-       </table>
+</table>
+
 <div class="axial">
-    <table border="0" cellspacing="2" cellpadding="3">
-        <tr>
-         <th width="120"><small>comments<br />
-         (sent to selected submittees)</small></th>
-                 <td><textarea rows="4" cols="40" name="global_comment"></textarea></td>
-        </tr>
-       </table>
+ <table border="0" cellspacing="2" cellpadding="3">
+  <tr>
+   <th width="120"><small>comments<br />
+   (sent to selected submittees)</small></th>
+   <td><textarea rows="4" cols="40" name="global_comment"></textarea></td>
+  </tr>
+ </table>
 </div>
-       
-       <p class="functnbar"><input type="submit" value="submit" name="eventSubmit_doSubmit" />&#160;<input type="submit" value="cancel" name="eventSubmit_doCancel" />&#160;<input type="submit" value="clear form" /></p>
+ 
+ <div class="functnbar2">
+ <table cellpadding="0" cellspacing="0" border="0">
+  <tr>
+   <td><input type="submit" value="submit" name="eventSubmit_doSubmit" />&#160;</td>
+   <td><input type="submit" value="cancel" name="eventSubmit_doCancel" />&#160;</td>
+   <td><input type="submit" value="clear form" /></td>
+  </tr>
+ </table>
+ </div>
 
 </form>
 #end
