--- a/src/templates/screens/AssignIssue.vm
+++ b/src/templates/screens/AssignIssue.vm
@@ -1,137 +1,137 @@
+<div class="app" id="assignissue">
 $page.setTitle("Assign Users to Issue")
 
+<h2>$page.Title</h2>
+
 #if ( !$actionLink )
-    #set ( $actionLink = $link.setPage("AssignIssue.vm").setAction("AssignIssue").addPathInfo("nextTemplate", "Index.vm") )
+ #set ( $actionLink = $link.setPage("AssignIssue.vm").setAction("AssignIssue").addPathInfo("nextTemplate", "Index.vm") )
 #end
 #set ($module = $scarabR.CurrentModule)
 #if (!$scarabR.Issue.isNew())
-    #set ($issue = $scarabR.Issue)
+ #set ($issue = $scarabR.Issue)
 #elseif ( $scarabR.Issues )
-    #set ($multiple = true)
-    #set ($issue = $scarabR.Issues.get(0))
+ #set ($multiple = true)
+ #set ($issue = $scarabR.Issues.get(0))
 #elseif ( $issueIdList )
-    #set ($multiple = true)
-    #set ( $issue = $scarabR.getIssue($issueIdList.get(0)) )
+ #set ($multiple = true)
+ #set ( $issue = $scarabR.getIssue($issueIdList.get(0)) )
 #else  ## this could grab all the issues
-    #set ($multiple = true)
-    #set ( $issue = $scarabR.IssueList.get(0) )
+ #set ($multiple = true)
+ #set ( $issue = $scarabR.IssueList.get(0) )
 #end
-
 
 #if ( $data.Parameters.getString("action") && $data.Parameters.getString("action") == "AssignIssue" )
-   #set ( $reentry = true )
+ #set ( $reentry = true )
 #end
-<div class="app" id="assignissue">
 
 #if ($reentry)
-    <p><strong class="alert">
-        Remember to add note and submit, when ready to save changes.
-    </strong></p>
+ <p><strong class="alert">
+  Remember to add note and submit, when ready to save changes.
+ </strong></p>
 #end
 
-   <form action="$actionLink" method="get">
-    <p class="functnbar">
-        <input type="submit" name="eventSubmit_doSubmit" 
-                 value="submit" />
-        <input type="submit" name="eventSubmit_doCancel" 
-                 value="cancel" />
-        <input type="reset" value="reset" />
-    </p>
+<form action="$actionLink" method="get">
 
-   <h3>$page.Title</h3>
+<div class="functnbar">
+ <table cellpadding="0" cellspacing="0" border="0">
+ <tr>
+ <td><input type="submit" name="eventSubmit_doSubmit" value="submit" /></td>
+ <td><input type="submit" name="eventSubmit_doCancel" value="cancel" /></td>
+ <td><input type="reset" value="reset" /></td>
+ </tr>
+ </table>
+</div>
 
 #set ( $issueGroup = $intake.Issue.Default )
 #if ($multiple)
-    #if ($issueIdList)
-        #foreach ($id in $issueIdList)
-            <input type="hidden" name="$issueGroup.Ids.Key" value="$id" />
-        #end
-    #elseif ($issueGroup.Ids.Value)
-        #foreach ($id in $issueGroup.Ids.Value)
-            <input type="hidden" name="$issueGroup.Ids.Key" value="$id" />
-        #end
-    #else
-        #foreach ($issue in $scarabR.IssueList)
-            <input type="hidden" name="$issueGroup.Ids.Key" 
-                value="$issue.IssueId" />
-        #end
-    #end
+ #if ($issueIdList)
+  #foreach ($id in $issueIdList)
+   <input type="hidden" name="$issueGroup.Ids.Key" value="$id" />
+  #end
+ #elseif ($issueGroup.Ids.Value)
+  #foreach ($id in $issueGroup.Ids.Value)
+   <input type="hidden" name="$issueGroup.Ids.Key" value="$id" />
+  #end
+ #else
+  #foreach ($issue in $scarabR.IssueList)
+   <input type="hidden" name="$issueGroup.Ids.Key" 
+ value="$issue.IssueId" />
+  #end
+ #end
 #else
-    <input type="hidden" name="$issueGroup.Id.Key" value="$issueGroup.Id" />
+ <input type="hidden" name="$issueGroup.Id.Key" value="$issueGroup.Id" />
 #end
 
-	<div class="sidebyside">
-    <table cellpadding="3" cellspacing="2" border="1" width="100%">
-    <tr>
-    <th>Users</th>	
-    <th>Assignees</th>
-    </tr>
+<div class="sidebyside">
+ <table cellpadding="3" cellspacing="2" border="1" width="100%">
+ <tr>
+  <th>Users</th>	
+  <th>Assignees</th>
+ </tr>
+ <tr>
+  <td>
 
-     <tr>
-      <td>
+  #if (!$reentry)
+   #foreach ( $userAssignee in $issue.EligibleAssignees )
+    <input type="hidden" name="removedusers" value="$userAssignee.UserName" />
+   #end
+  #end
+  <select name="newaddusers" size="8" multiple="multiple">
+  #if (!$reentry)
+   #foreach ( $userAssignee in $issue.EligibleAssignees )
+    <option value="$userAssignee.UserName">$userAssignee.UserName</option>
+   #end
+  #else
+   #foreach ( $username in $data.Parameters.getStrings("removedusers") )
+    <option value="$username">$username</option>
+   #end
+  #end
+  </select>
+  <input type="submit" name="eventSubmit_doAdd" value="Add" />
+  </td>
+  <td>
 
-#if (!$reentry)
-    #foreach ( $userAssignee in $issue.EligibleAssignees )
-       <input type="hidden" name="removedusers" value="$userAssignee.UserName" />
-    #end
-#end
-       <select name="newaddusers" size="8" multiple="multiple">
-#if (!$reentry)
-    #foreach ( $userAssignee in $issue.EligibleAssignees )
-       <option value="$userAssignee.UserName">$userAssignee.UserName</option>
-    #end
-#else
-    #foreach ( $username in $data.Parameters.getStrings("removedusers") )
-       <option value="$username">$username</option>
-    #end
-#end
-      </select>
-    <input type="submit" name="eventSubmit_doAdd" value="Add" />
-      </td>
-      <td>
+  #if (!$reentry)
+   #foreach ( $assignee in $issue.AssigneeAttributeValues )
+   <input type="hidden" name="addedusers" value="$assignee.Value" />
+   #end
+  #end
+  <select name="newremoveusers" size="8" multiple="multiple">
 
-#if (!$reentry)
-    #foreach ( $assignee in $issue.AssigneeAttributeValues )
-       <input type="hidden" name="addedusers" value="$assignee.Value" />
-    #end
-#end
-      <select name="newremoveusers" size="8" multiple="multiple">
-
-#if (!$reentry)
-    #foreach ( $assignee in $issue.AssigneeAttributeValues )
-       <option value="$assignee.Value">$assignee.Value</option>
-    #end
-#else
-    #foreach ( $username in $data.Parameters.getStrings("addedusers") )
-       <option value="$username">$username</option>
-    #end
-#end
-      </select>
-      <input type="submit" name="eventSubmit_doRemove" 
-                 value="Remove" />
-
-      </td>
-     </tr>
-    </table>
+  #if (!$reentry)
+   #foreach ( $assignee in $issue.AssigneeAttributeValues )
+   <option value="$assignee.Value">$assignee.Value</option>
+   #end
+  #else
+   #foreach ( $username in $data.Parameters.getStrings("addedusers") )
+   <option value="$username">$username</option>
+   #end
+  #end
+  </select>
+  <input type="submit" name="eventSubmit_doRemove" value="Remove" />
+  </td>
+  </tr>
+ </table>
 </div>
 	
 #set ( $atch = $scarabR.Attachment )
 #set( $intakeAttachment = $intake.Attachment.mapTo($atch) )
 
- <h3>Note #fieldErrorMsg($intakeAttachment.DataAsString "")</h3>
- <p>
-       <textarea name="$intakeAttachment.DataAsString.Key" rows="4" 
-            cols="40" class="text">$!intakeAttachment.DataAsString</textarea>
- </p>
- 
-<p class="functnbar">
-    <input type="submit" name="eventSubmit_doSubmit" 
-             value="submit" />
-    <input type="submit" name="eventSubmit_doCancel" 
-             value="cancel" />
-    <input type="reset" value="reset" />
+<h3>Note #fieldErrorMsg($intakeAttachment.DataAsString "")</h3>
+<p>
+<textarea name="$intakeAttachment.DataAsString.Key" rows="4" cols="40" class="text">$!intakeAttachment.DataAsString</textarea>
 </p>
+ 
+<div class="functnbar2">
+ <table cellpadding="0" cellspacing="0" border="0">
+ <tr>
+ <td><input type="submit" name="eventSubmit_doSubmit" value="submit" /></td>
+ <td><input type="submit" name="eventSubmit_doCancel" value="cancel" /></td>
+ <td><input type="reset" value="reset" /></td>
+ </tr>
+ </table>
+</div>
 
-   $intake.declareGroups()
-   </form>
+$intake.declareGroups()
+</form>
 </div>
