--- a/src/templates/screens/Error.vm
+++ b/src/templates/screens/Error.vm
@@ -1,25 +1,26 @@
+<div class="app" id="error">
 $page.setTitle("Scarab Error")
 
-<h2>Scarab Error</h2>
-
+<h2>$page.Title</h2>
 
 #if( $data.getMessage() )
-    Message: $data.getMessage()
+ Message: $data.getMessage()
 #else
-    #if ( $stackTrace )
-        Stack Trace:
-        <pre>
-        $stackTrace
-        </pre>
-    #else
-        <p>
-Sorry, there was no error message. :-( If there was one, it would have been shown 
-        here. Please believe me! 
-</p>
-
-        <p>
-        Although, one common source of the error could be a result of not being able 
-        to find the requested template. Please try going back to the <a 
-        href="$link.setPage("Start.vm")">Start</a> screen and starting over.</p>
-    #end
+ #if ( $stackTrace )
+  Stack Trace:
+  <pre>
+  $stackTrace
+  </pre>
+ #else
+  <p>
+Sorry, there was no error message. :-( If there was one, it would have been 
+shown here. Please believe me! 
+ </p>
+ <p>
+  Although, one common source of the error could be a result of not being able 
+  to find the requested template. Please try going back to the 
+  <a href="$link.setPage("Start.vm")">Start</a> screen and starting over.
+ </p>
+ #end
 #end
+</div>
