--- a/src/templates/screens/TemplateList.vm
+++ b/src/templates/screens/TemplateList.vm
@@ -1,5 +1,5 @@
 
-#set ( $action = $link.setPage("TemplateList.vm").setAction("TemplateList").addPathInfo("nextTemplate", "TemplateList.vm") )
+#set ($action = $link.setPage("TemplateList.vm").setAction("TemplateList").addPathInfo("nextTemplate", "TemplateList.vm").toString())
 
 #set ($module = $scarabR.CurrentModule)
 #set ($user = $data.User)
@@ -8,8 +8,7 @@
    #set ($noTemplates = "true")
 #end
 
-<P>
-
+<p>
 
 <form method="post" action="$action" >
 
